Fix spacing.

--- a/assets/stylesheets/blog/_post.scss
+++ b/assets/stylesheets/blog/_post.scss
@@ -24,7 +24,7 @@
 
 .post-image {
   display: block;
-  margin: 144px auto 41px; // 144px, 96px
+  margin: 144px auto 73px; // 144px, 96px
   max-width: 100%;
   height: auto;
 }
